--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 400;
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
   }
 
 body {
-    background: url("image/background.jpg");
+    background: url("image/background.svg");
     background-size : cover;               
     background-repeat : no-repeat;
 }
@@ -23,9 +28,58 @@ body {
     flex-direction: column;
     width: 20%;
     height: 100vh;
-    padding: 2vh;
+    padding: 12px;
     background-color: white;
 }
+
+.list-menu-container {
+    margin-top: 16px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+
+.text-selected {
+    font-weight: bold;
+    color: #23CE78;
+}
+
+.menu {
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+
+.menu-text {
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    filter: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+}
+
+.icon {
+    padding-right: 2vh;
+    height: 20px;
+    width: 20px;
+    margin-right: 8px;
+}
+
+.icon img {
+    display: flex;
+    align-items: center;
+    object-fit: contain;
+}
+
+.logo img {
+    object-fit: contain;
+    width: 100%;
+}
+
 .mid-cont {
     display: flex;
     flex-direction: column;
@@ -42,4 +96,38 @@ body {
     height: 100vh;
     padding: 2vh;
     background-color: yellow;
+}
+
+.info {
+    margin-top: auto;
+    width: 100%;
+    height: 300px;
+    background: linear-gradient(270deg, #254E87 0%, #249F5E 100%);
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 24px 12px;
+}
+
+.info-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 72px;
+    height: 72px;
+    background-color: white;
+    border-radius: 72px;
+}
+
+.info-text {
+    color: white;
+    text-align: center;
+}
+
+.text-bold {
+    font-weight: 700;
+    font-size: 20px;
 }
