--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     flex-direction: column;
     width: 20%;
     height: 100vh;
-    padding: 12px;
+    padding: 25px;
     background-color: white;
 }
 
@@ -59,14 +59,14 @@ body {
 .logo {
     display: flex;
     justify-content: center;
-    filter: drop-shadow(0 25px 25px rgb(0 0 0 / 0.15));
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
 }
 
 .icon {
     padding-right: 2vh;
     height: 20px;
     width: 20px;
-    margin-right: 8px;
+    margin-right: 15px;
 }
 
 .icon img {
@@ -110,6 +110,7 @@ body {
     justify-content: center;
     gap: 12px;
     padding: 24px 12px;
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
 }
 
 .info-logo {
