--- a/style.css
+++ b/style.css
@@ -132,3 +132,73 @@ body {
     font-weight: 700;
     font-size: 20px;
 }
+
+.right-cont {
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-dock {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.profile-container {
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 5hv;
+    width: 100%;
+    height: 100px;
+    border-radius: 16px;
+    box-shadow: inset;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 30px;
+    padding: 24px 12px;
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+}
+
+/* .foto-profile {
+    width: 70px;
+    height: 70px;
+    border-radius: 35px;
+    background:  #f8f8f8;
+    box-shadow: inset;
+    gap: 12px;
+    padding: 24px 12px;
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+} */
+
+.jatuh-tempo-container {
+    margin-top: auto;
+    width: 100%;
+    height: 200px;
+    background:  #f8f8f8;
+    border-radius: 16px;
+    box-shadow: inset;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 24px 12px;
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+}
+
+.layanan-container {
+    margin-top: auto;
+    width: 100%;
+    height: 300px;
+    background:  #f8f8f8;
+    border-radius: 16px;
+    box-shadow: inset;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 24px 12px;
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+}
