--- a/pages/style.css
+++ b/pages/style.css
@@ -136,7 +136,6 @@ body {
 .right-body-cont {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
     height: 90%;
     margin-top: 2vh;
@@ -146,12 +145,13 @@ body {
     filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
 }
 
+
 .back-button {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 50px;
+    width: 80px;
     height: 50px;
     border-radius: 10px;
     background-color: white;
@@ -176,10 +176,41 @@ body {
     width: 100%;
     background-color: white;
     border-radius: 10px;
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
 }
 
 .search-icon {
     width: 24px;
     height: 24px;
     margin-left: 15px;
+}
+
+.profile-container {
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 5hv;
+    width: 500px;
+    height: 100px;
+    border-radius: 16px;
+    box-shadow: inset;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 30px;
+    padding: 24px 0 px;
+    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+}
+
+.title-samsat-container {
+    padding: 1vw;
+}
+
+.title-samsat-container h3 {
+    font-weight: 400;
+    color:#676767;
+    ; 
+}
+
+.table-jadwal-container {
+    padding: 1vw;
 }
