--- a/style.css
+++ b/style.css
@@ -87,7 +87,6 @@ body {
     width: 60%;
     height: 100vh;
     padding: 2vh;
-    background-color: teal;
 }
 .right-cont {
     display: flex;
@@ -160,17 +159,6 @@ body {
     filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
 }
 
-/* .foto-profile {
-    width: 70px;
-    height: 70px;
-    border-radius: 35px;
-    background:  #f8f8f8;
-    box-shadow: inset;
-    gap: 12px;
-    padding: 24px 12px;
-    filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
-} */
-
 .jatuh-tempo-container {
     margin-top: auto;
     width: 100%;
@@ -202,3 +190,40 @@ body {
     padding: 24px 12px;
     filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
 }
+
+.mid-header {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 10%;
+    padding: 25px;
+    background-color: blanchedalmond;
+}
+
+.info-kendaraan {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 30%;
+    padding: 25px;
+    background-color: plum;
+}
+
+.informasi-dashboard {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 40%;
+    padding: 25px;
+    background-color: lavender;
+}
+
+.banner-iklan {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 20%;
+    padding: 25px;
+    background-color: greenyellow;
+}
+
