--- a/style.css
+++ b/style.css
@@ -193,20 +193,100 @@ body {
 
 .mid-header {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     height: 10%;
-    padding: 25px;
-    background-color: blanchedalmond;
+    align-items: center;
+}
+
+.hello-anda {
+    display: flex;
+    flex-direction: column;
+    color: #000000;
+    margin-right: 20px;
+}
+
+.hello-anda h1{
+    font-weight: bold;
+}
+
+.hello-anda p{
+    color: #707eae;
+    margin-top: -10px;
+    font-weight: 500;
+}
+
+.pencarian {
+    display: flex;
+    flex-direction: row;
+    width: 63%;
+    height: 40px;
+    background-color: #ffffff;
+    border-radius: 15px;
+    margin-top: 10px;
+    box-shadow: 0px 1px 4px#323232;
+}
+
+.pencarian input {
+    width: 100%;
+    height: 100%;
+    color: #bdbdbd;
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
+    border: 1px solid #ffffff;
+    outline: none;
+    padding-left: 10px;
+}
+
+.pencarian img  {
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .info-kendaraan {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    border-radius: 15px;
     width: 100%;
     height: 30%;
     padding: 25px;
-    background-color: plum;
+    background-color: rgb(255, 255, 255);
+    margin-bottom: 20px;
+    margin-top: 30px;
+    font-weight: bold;
+}
+
+.info-kendaraan img {
+    margin-right: 20px;
+}
+
+.detail1 {
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+}
+
+.detail1 p {
+    margin-top: 10px;
+}
+
+.detail2 {
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.detail2 p {
+    margin-top: 10px;
 }
 
 .informasi-dashboard {
