--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ body {
     height: 35%;
     padding: 25px;
     background-color: lavender;
+    margin-bottom: 20px;
 }
 
 .banner-iklan {
@@ -303,7 +304,10 @@ body {
     flex-direction: column;
     width: 100%;
     height: 25%;
-    padding: 25px;
-    background-color: greenyellow;
+}
+
+.banner-iklan img {
+    width: 100%;
+    height: 100%;
 }
 
