pindahin semua image dan css ke folder static

--- a/templates/pages/samling.html
+++ b/templates/pages/samling.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="shortcut icon" type="x-icon" href="../../images/favicon.ico" />
+        <link rel="shortcut icon" type="x-icon" href="../../../static/images/favicon.ico" />
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="../static/pages/style.css" />
         <title>SamIT</title>
   </head>
 
@@ -15,12 +15,12 @@
     <div class = "web-container">
       <div class = "left-cont">
         <div class = "logo">
-          <img src = "../image/logosamit.svg">
+          <img src = "../../static/image/logosamit.svg">
         </div>
         <div class = "list-menu-container">
           <div class = "menu">
             <div class = "icon">
-              <img src = "../image/icons/ic_dashboard.svg">
+              <img src = "../../static/image/icons/ic_dashboard.svg">
             </div>
             <div class = "menu-text">
               <h3 class = "text-selected">Dashboard</h3>
@@ -28,7 +28,7 @@
           </div>
           <div class = "menu">
             <div class = "icon">
-              <img src = "../image/icons/ic_car.svg">
+              <img src = "../../static/image/icons/ic_car.svg">
             </div>
             <div class = "menu-text">
               <h3>Samsat</h3>
@@ -36,7 +36,7 @@
           </div>
           <div class = "menu">
             <div class = "icon">
-              <img src = "../image/icons/ic_pajak.svg">
+              <img src = "../../static/image/icons/ic_pajak.svg">
             </div>
             <div class = "menu-text">
               <h3>Info Pajak</h3>
@@ -44,7 +44,7 @@
           </div>
           <div class = "menu">
             <div class = "icon">
-              <img src = "../image/icons/ic_panduan.svg">
+              <img src = "../../static/image/icons/ic_panduan.svg">
             </div>
             <div class = "menu-text">
               <h3>Panduan</h3>
@@ -52,7 +52,7 @@
           </div>
           <div class = "menu">
             <div class = "icon">
-              <img src = "../image/icons/ic_pembayaran.svg">
+              <img src = "../../static/image/icons/ic_pembayaran.svg">
             </div>
             <div class = "menu-text">
               <h3>Pembayaran</h3>
@@ -60,7 +60,7 @@
           </div>
           <div class = "menu">
             <div class = "icon">
-              <img src = "../image/icons/ic_cc.svg">
+              <img src = "../../static/image/icons/ic_cc.svg">
             </div>
             <div class = "menu-text">
               <h3>Customer Care</h3>
@@ -68,7 +68,7 @@
           </div>
           <div class = "menu">
             <div class = "icon">
-              <img src = "../image/icons/ic_settings.svg">
+              <img src = "../../static/image/icons/ic_settings.svg">
             </div>
             <div class = "menu-text">
               <h3>Settings</h3>
@@ -77,7 +77,7 @@
         </div>
         <div class = "info">
           <div class = "info-logo">
-            <img src = "../image/icons/ic_green_shield.svg"> 
+            <img src = "../../static/image/icons/ic_green_shield.svg"> 
           </div>
           <p class = "info-text text-bold">Awasi pajak kendaraanmu!</p>
           <p class = "info-text">Bayar pajak tidak perlu ribet ! Cukup klik dan beres</p>
@@ -88,17 +88,17 @@
       <div class = "right-cont">
         <div class = "right-header-cont">
           <div class = "back-button">
-            <img src = "../image/icons/back.svg">
+            <img src = "../../static/image/icons/back.svg">
           </div>
           <div class = "search-bar">
             <div class = "search-icon">
-              <img src = "../image/icons/search.svg">
+              <img src = "../../static/image/icons/search.svg">
             </div>
           </div>
           <div class="profile-container">
-            <img src="../image/icons/ic_notification.svg">
+            <img src="../../static/image/icons/ic_notification.svg">
             Aulia Fajri
-            <img src="../image/foto/profile.svg" style="padding: 2px;">   
+            <img src="../../static/image/foto/profile.svg" style="padding: 2px;">   
           </div>
         </div>
 
