tambah buka page samling
masih dummy, klik logo SamIT untuk buka halaman Samling

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class = "web-container">
       <div class = "left-cont">
         <div class = "logo">
-          <img src = "../static/image/logosamit.svg">
+          <a href = "{{ url_for('samling') }}"><img src = "../static/image/logosamit.svg" ></a>
         </div>
         <div class = "list-menu-container">
           <div class = "menu">
