--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -12,7 +12,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
 body {
-    background: url("image/background.svg");
+    background: url("../image/background.svg");
     background-size : cover;               
     background-repeat : no-repeat;
 }
