mengisi bagian mid (sudah lengkap)

--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,45 @@
             </div>
           </div>
           <div class = "informasi-dashboard">
-            WLWELWELWEL
+            <div class="terdekat">
+              <div class="judul-terdekat">
+                <p>Samsat Terdekat</p>
+              </div>
+              <div class="gambar-terdekat">
+                <img src="..\../static/image\icons\maps.svg" alt="">
+              </div>
+              <div class="selengkapnya-terdekat">
+                <p>Selengkapnya</p>
+              </div>
+            </div>
+            <div class="berita">
+              <div class="judul-berita">
+                <p>Berita Harian Terkini</p>
+              </div>
+              <div class="gambar-berita">
+                <img src="..\../static/image\icons\berita.svg" alt="">
+              </div>
+              <div class="isi-berita">
+                <p>Bapenda Jabar Galang Donasi Untuk Gempa Cianjur</p>
+              </div>
+              <div class="selengkapnya-berita">
+                <p>Selengkapnya</p>
+              </div>
+            </div>
+            <div class="riwayat">
+              <div class="judul-riwayat">
+                <p>Riwayat Pembayaran</p>
+              </div>
+              <div class="gambar-riwayat">
+                <img src="..\../static/image\icons\motorcycle 1.svg" alt="">
+              </div>
+              <div class="isi-riwayat">
+                <p>Pajak Motor</p>
+              </div>
+              <div class="selengkapnya-riwayat">
+                <p>Selengkapnya</p>
+              </div>
+            </div>
           </div>
           <div class = "banner-iklan">
             <img src="..\../static/image\icons\iklan.svg" alt="">
