--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -311,12 +311,113 @@ body {
 
 .informasi-dashboard {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
     height: 35%;
-    padding: 25px;
-    background-color: lavender;
     margin-bottom: 20px;
+}
+
+.terdekat {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    border-radius: 15px;
+    border: 1px solid #ffffff;
+    background-color: rgb(255, 255, 255);
+}
+
+.judul-terdekat {
+    text-align: center;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.gambar-terdekat {
+    padding: 5%;
+}
+
+.gambar-terdekat img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+}
+
+.selengkapnya-terdekat {
+    text-align: right;
+    font-size: smaller;
+    margin-top: 2px;
+    color: #416bff
+}
+
+.berita {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    margin-right: 10px;
+    margin-left: 10px;
+    border-radius: 15px;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+}
+
+.judul-berita {
+    text-align: center;
+    margin-bottom: 22px;
+    font-weight: bold;
+}
+
+.isi-berita {
+    text-align: center;
+    font-size: smaller;
+}
+
+.selengkapnya-berita {
+    text-align: right;
+    font-size: smaller;
+    margin-top: 20px;
+    color: #416bff
+}
+
+.riwayat {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    border-radius: 15px;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+}
+
+.judul-riwayat {
+    text-align: center;
+    font-weight: bold;
+}
+
+.gambar-riwayat {
+    padding: 5%;
+    text-align: center;
+}
+
+.gambar-riwayat img {
+    width: 80%;
+    height: 80%;
+}
+
+.isi-riwayat {
+    text-align: center;
+    font-size: smaller;
+}
+
+.selengkapnya-riwayat {
+    text-align: right;
+    font-size: smaller;
+    margin-top: 22px;
+    color: #416bff
 }
 
 .banner-iklan {
