--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="info">
           <div class="info-logo">
-            <img src="../static/image/icons/ic_green_shield.svg" alt=""> 
+            <img src="../static/image/icons/ic_green_shield.svg"> 
           </div>
           <p class="info-text text-bold">Awasi pajak kendaraanmu!</p>
           <p class="info-text">Bayar pajak tidak perlu ribet ! Cukup klik dan beres</p>
@@ -91,14 +91,14 @@
               <p>Jalan Ganesha No.10, Bandung</p>
             </div>
             <div class = "pencarian">
-              <img src="..\../static/image\icons\search.svg" alt="">
+              <img src="../../static/image/icons/search.svg" alt="">
               <input type="text" placeholder="search">
             </div>
           </div>
           <div class = "info-kendaraan">
             <div class = "kendaraan">
               <div class = "gambar-kendaraan">
-                <img src="..\../static/image\icons\motorcycle 1.svg" alt="">
+                <img src="../../static/image/icons/motorcycle 1.svg" alt="">
               </div>
               <div class="detail1">
                 <p>Plat Nomor       : D 1893 ray</p>
@@ -113,7 +113,7 @@
               </div>
             </div>
             <div class = "jumlah-kendaraan">
-              <img src="..\../static/image\icons\titik4.svg" alt="">
+              <img src="../../static/image/icons/titik4.svg" alt="">
             </div>
           </div>
           <div class = "informasi-dashboard">
@@ -122,7 +122,7 @@
                 <p>Samsat Terdekat</p>
               </div>
               <div class="gambar-terdekat">
-                <img src="..\../static/image\icons\maps.svg" alt="">
+                <img src="../../static/image/icons/maps.svg" alt="">
               </div>
               <div class="selengkapnya-terdekat">
                 <p>Selengkapnya</p>
@@ -133,7 +133,7 @@
                 <p>Berita Harian Terkini</p>
               </div>
               <div class="gambar-berita">
-                <img src="..\../static/image\icons\berita.svg" alt="">
+                <img src="../../static/image/icons/berita.svg" alt="">
               </div>
               <div class="isi-berita">
                 <p>Bapenda Jabar Galang Donasi Untuk Gempa Cianjur</p>
@@ -147,7 +147,7 @@
                 <p>Riwayat Pembayaran</p>
               </div>
               <div class="gambar-riwayat">
-                <img src="..\../static/image\icons\motorcycle 1.svg" alt="">
+                <img src="../../static/image/icons/motorcycle 1.svg" alt="">
               </div>
               <div class="isi-riwayat">
                 <p>Pajak Motor</p>
@@ -158,7 +158,7 @@
             </div>
           </div>
           <div class = "banner-iklan">
-            <img src="..\../static/image\icons\iklan.svg" alt="">
+            <img src="../../static/image/icons/iklan.svg" alt="">
           </div>
       </div>
 
