--- a/templates/pages/samling.html
+++ b/templates/pages/samling.html
@@ -9,13 +9,15 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="../static/css/samling_style.css" />
         <title>SamIT</title>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
 
   <body>
     <div class = "web-container">
       <div class = "left-cont">
         <div class = "logo">
-          <img src = "../../static/image/logosamit.svg">
+          <!-- <img src = "../../static/image/logosamit.svg"> -->
+          <button onclick="getData()">Get Data </button>
         </div>
         <div class = "list-menu-container">
           <div class = "menu">
@@ -108,7 +110,74 @@
             <h3>Kota Bandung</h3>
           </div>
           <div class = "table-jadwal-container">
-            ini jadwal
+            
+            <style>
+              table{
+                counter-reset: row-num;
+              }
+              tr{
+                counter-increment: row-num;
+              }
+              tr td:first-child::before{
+                content: counter(row-num);
+                display: inline-block;
+                min-width: 1em;
+                margin-right: 0.5em;
+                text-align: right;
+              }
+            </style>
+
+            <table>
+              <thead>
+                <tr>
+                  <th>No</th>
+                  <th>Lokasi</th>
+                  <th>Alamat</th>
+                  <th>Waktu Buka</th>
+                  <th>Waktu Tutup</th>
+                  <th>Hari</th>
+                </tr>
+              </thead>
+              <tbody id="table-body">
+              </tbody>
+            </table>
+
+            <script>
+              function getData(){
+                axios.get('/api/samling')
+                  .then(response => {
+
+                    const tableBody = document.getElementById('table-body')
+                    
+                    for (var i=0; i<response.data.length; i++) {
+                      var row = document.createElement('tr')
+                      var no = document.createElement('td')
+                      var lokasi = document.createElement('td')
+                      var alamat = document.createElement('td')
+                      var waktuBuka = document.createElement('td')
+                      var waktuTutup = document.createElement('td')
+                      var hari = document.createElement('td')
+
+                      cell1.innerHTML = response.data[i].no;
+                      cell2.innerHTML = response.data[i].lokasi;
+                      cell3.innerHTML = response.data[i].alamat;
+                      cell4.innerHTML = response.data[i].waktuBuka;
+                      cell5.innerHTML = response.data[i].waktuTutup;
+                      cell6.innerHTML = response.data[i].hari;
+
+                      row.appendChild(no)
+                      row.appendChild(lokasi)
+                      row.appendChild(alamat)
+                      row.appendChild(waktuBuka)
+                      row.appendChild(waktuTutup)
+                      row.appendChild(hari)
+
+                      table.appendChild(row)
+                    }
+                  })
+              }
+            </script>
+
           </div>
         </div>
       </div>
