update buat ray

--- a/templates/index.html
+++ b/templates/index.html
@@ -183,17 +183,19 @@
         <div class="layanan-container">
           <p class="layanan">Layanan :</p>
           <div class="dropdown">
-            <button class="dropbtn">Pilih Layanan</button>
+            <label class="dropbtn">Pilih Layanan</label>
             <div class="dropdown-content">
-            <a>Samsat Keliling</a>
-            <a>Samsat J'Bret</a>
-            <a>Samsat Masuk Desa</a>
-            <a>Samsat Outlet</a>
-            <a>Samsat Gendrong</a>
-            <a>Samsat Drive Thru</a>
-            <a>Samsat Corner</a>
-            <a>Samsat KCP Bank BJB</a>
-            <a>Samsat Online 3 Provinsi</a>  
+              <select>
+                <option>Samsat Keliling</option>
+                <option>Samsat J'Bret</option>
+                <option>Samsat Masuk Desa</option>
+                <option>Samsat Outlet</option>
+                <option>Samsat Gendrong</option>
+                <option>Samsat Drive Thru</option>
+                <option>Samsat Corner</option>
+                <option>Samsat KCP Bank BJB</option>
+                <option>Samsat Online 3 Provinsi</option>
+              </select>
             </div>
           </div>
           <p class="tempat">Tempat :</p>
