--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -94,7 +94,7 @@ body {
     width: 20%;
     height: 100vh;
     padding: 2vh;
-    background-color: yellow;
+    background-color: rgba(255, 255, 0, 0);
 }
 
 .info {
@@ -162,7 +162,7 @@ body {
     margin-top: 2vh;
     width: 100%;
     height: 275px;
-    background:  #f8f8f8;
+    background:  #ffffff;
     border-radius: 16px;
     box-shadow: inset;
     display: flex;
@@ -207,7 +207,7 @@ body {
     margin-top: 2vh;
     width: 100%;
     height: 350px;
-    background:  #f8f8f8;
+    background:  #ffffff;
     border-radius: 16px;
     box-shadow: inset;
     display: flex;
