--- a/templates/pages/samling.html
+++ b/templates/pages/samling.html
@@ -16,8 +16,7 @@
     <div class = "web-container">
       <div class = "left-cont">
         <div class = "logo">
-          <!-- <img src = "../../static/image/logosamit.svg"> -->
-          <button onclick="getData()">Get Data </button>
+          <img src = "../../static/image/logosamit.svg">
         </div>
         <div class = "list-menu-container">
           <div class = "menu">
@@ -90,7 +89,7 @@
       <div class = "right-cont">
         <div class = "right-header-cont">
           <div class = "back-button">
-            <img src = "../../static/image/icons/back.svg">
+            <img src = "../../static/image/icons/back.svg" onclick="location.href='/'">
           </div>
           <div class = "search-bar">
             <div class = "search-icon">
