--- a/static/css/samling_style.css
+++ b/static/css/samling_style.css
@@ -156,6 +156,7 @@ body {
     border-radius: 10px;
     background-color: white;
     filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+    cursor: pointer;
 }
 
 .back-button img {
