--- a/static/css/samling_style.css
+++ b/static/css/samling_style.css
@@ -213,7 +213,17 @@ body {
 }
 
 .table-jadwal-container {
-    padding: 1vw;
+    overflow-y: auto;
+    border-radius: 6px;
+    box-shadow: 4px 4px 4px 4px rgba(0, 0, 0, 0.25);  
+    background-color: rgba(240, 221, 52, 0);
+    
+}
+
+.table-jadwal-container thead th {
+    position: sticky;
+    top: 0;
+    background-color: #249165;
 }
 
 table {
@@ -224,13 +234,13 @@ table {
 
 th,
 td {
+    vertical-align: middle;
     padding: 8px 16px;
 }
-
 th {
     background: rgb(22, 150, 229);
-}
 
+}
 #table tr td{
     text-align: center;
     height : 60px;
