--- a/templates/index.html
+++ b/templates/index.html
@@ -86,13 +86,13 @@
       </div>
       <div class = "mid-cont">
           <div class = "mid-header">
-            <div class="hello-anda">
+            <div class = "hello-anda">
               <h1>Hello, Aulia!</h1>
               <p>Jalan Ganesha No.10, Bandung</p>
             </div>
             <div class = "pencarian">
               <img src="../../static/image/icons/search.svg" alt="">
-              <input type="text" placeholder="search">
+              <input type="text" placeholder = "Search">
             </div>
           </div>
           <div class = "info-kendaraan">
@@ -100,20 +100,32 @@
               <div class = "gambar-kendaraan">
                 <img src="../../static/image/icons/motorcycle 1.svg" alt="">
               </div>
-              <div class="detail1">
-                <p>Plat Nomor       : D 1893 ray</p>
+              <div class="detail">
+                <ul>
+                  <li><b>Plat Nomor</b>       : D 1893 RAY</li>
+                  <li><b>Jenis Kendaraan</b>  : Motor Sport</li>
+                  <li><b>Warna Kendaraan</b>  : Merah Hitam</li>
+                  <li><b>Nomor Rangka </b>    : 1HGBH41JXMNxxxxx</li>
+                  <li><b>Nomor Mesin</b>      : JF21E</li>
+                  <li><b>Jumlah Biaya </b>    : Rp 358.000</li>
+                  <li><b>Diskon Pajak </b>    : ARp 35.800</li>
+                </ul>
+                <!-- <p>Plat Nomor       : D 1893 RAY</p>
                 <p>Jenis Kendaraan  : Motor Sport</p>
                 <p>Warna Kendaraan  : Merah Hitam</p>
                 <p>Nomor Rangka     : 1HGBH41JXMNxxxxx</p>
+                <p>Nomor Mesin      : JF21E</p>
+                <p>Jumlah Biaya     : Rp 358.000</p>
+                <p>Diskon Pajak     : Rp 35.800</p> -->
               </div>
-              <div class="detail2">
+              <!-- <div class="detail2">
                 <p>Nomor Mesin      : JF21E</p>
                 <p>Jumlah Biaya     : Rp 358.000</p>
                 <p>Diskon Pajak     : Rp 35.800</p>
-              </div>
+              </div> -->
             </div>
             <div class = "jumlah-kendaraan">
-              <img src="../../static/image/icons/titik4.svg" alt="">
+              <!-- <img src="../../static/image/icons/titik4.svg" alt=""> -->
             </div>
           </div>
           <div class = "informasi-dashboard">
@@ -130,13 +142,14 @@
             </div>
             <div class="berita">
               <div class="judul-berita">
-                <p>Berita Harian Terkini</p>
+                <p>Bapenda Jabar Galang Donasi Untuk Gempa Cianjur</p>
               </div>
               <div class="gambar-berita">
                 <img src="../../static/image/icons/berita.svg" alt="">
               </div>
               <div class="isi-berita">
-                <p>Bapenda Jabar Galang Donasi Untuk Gempa Cianjur</p>
+                <p>Kepala Badan Pendapatan Daerah Provinsi Jawa Barat (Bapenda Jabar), Dedi Taufik 
+                   mengajak seluruh pegawai Bapenda serta pegawai Samsat […]</p>
               </div>
               <div class="selengkapnya-berita">
                 <p>Selengkapnya</p>
@@ -151,14 +164,14 @@
               </div>
               <div class="isi-riwayat">
                 <p>Pajak Motor</p>
+                <div class="banner-riwayat">
+                  30 November 2021
+                </div>
               </div>
               <div class="selengkapnya-riwayat">
                 <p>Selengkapnya</p>
               </div>
             </div>
-          </div>
-          <div class = "banner-iklan">
-            <img src="../../static/image/icons/iklan.svg" alt="">
           </div>
       </div>
 
