--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -203,28 +203,27 @@ body {
 .hello-anda {
     display: flex;
     flex-direction: column;
-    color: #000000;
-    margin-right: 20px;
+    justify-content: center;
 }
 
-.hello-anda h1{
-    font-weight: bold;
+.hello-anda h1 {
+    font-weight: 600;
 }
 
-.hello-anda p{
-    color: #707eae;
-    margin-top: -10px;
-    font-weight: 500;
+.hello-anda p {
+    color:#707eae;
+    font-size: 15px;
 }
 
 .pencarian {
     display: flex;
     flex-direction: row;
-    width: 63%;
+    align-items: center;
+    width: 68%;
     height: 40px;
+    margin-left: 20px;
     background-color: #ffffff;
     border-radius: 15px;
-    margin-top: 10px;
     box-shadow: 0px 1px 4px#323232;
 }
 
@@ -241,9 +240,8 @@ body {
 
 .pencarian img  {
     width: 20px;
-    height: 20px;
+    height: 20px;  
     margin-left: 10px;
-    margin-top: 10px;
 }
 
 .info-kendaraan {
@@ -251,70 +249,72 @@ body {
     flex-direction: column;
     border-radius: 15px;
     width: 100%;
-    height: 30%;
+    height: 40%;
     padding: 25px;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     margin-bottom: 20px;
-    margin-top: 30px;
+    /* margin-top: 30px;
     font-weight: bold;
-    align-items: center;
+    align-items: center; */
 }
 
-.jumlah-kendaraan {
+/* .jumlah-kendaraan {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 120px;
-}
+} */
 
 .kendaraan {
     display: flex;
     flex-direction: row;
     border-radius: 15px;
     width: 100%;
-    height: 30%;
-    background-color: rgb(255, 255, 255);
+    height: 90%;
+    background-color: red;
     margin-bottom: 20px;
     font-weight: bold;
 }
 
-.kendaraan img {
-    margin-right: 10px;
-}
-
-.detail1 {
-    font-size: 15px;
-    display: flex;
-    flex-direction: column;
-    width: 140%;
+.gambar-kendaraan {
+    width: 45%;
     height: 100%;
-    margin-top: 20px;
+    background-color: teal;
 }
 
-.detail1 p {
-    margin-top: 10px;
-}
-
-.detail2 {
+.detail {
     font-size: 15px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    background-color: purple;
+    width: 55%;
     height: 100%;
-    margin-top: 20px;
-    margin-left: 10px;
 }
 
-.detail2 p {
-    margin-top: 10px;
-}
+ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+  }
+  
+.detai li {
+    display: table-row;
+  }
+  
+.detail b {
+    display: table-cell;
+    padding-right: 1em;
+  }
 
 .informasi-dashboard {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 35%;
-    margin-bottom: 20px;
+    height: 45%;
+}
+
+.jumlah-kendaraan {
+    width: 100%;
+    height: 10%;
+    background-color: brown;
 }
 
 .terdekat {
@@ -330,12 +330,13 @@ body {
 
 .judul-terdekat {
     text-align: center;
+    font-size: 16px;
     margin-bottom: 10px;
     font-weight: bold;
 }
 
 .gambar-terdekat {
-    padding: 5%;
+    padding: 5% 0 5% 0;
 }
 
 .gambar-terdekat img {
@@ -346,8 +347,9 @@ body {
 
 .selengkapnya-terdekat {
     text-align: right;
+    text-align: bottom;
     font-size: smaller;
-    margin-top: 2px;
+    margin-top: 40px;
     color: #416bff
 }
 
@@ -365,20 +367,48 @@ body {
 }
 
 .judul-berita {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.judul-berita p {
     text-align: center;
-    margin-bottom: 22px;
+    font-size: 14px;
     font-weight: bold;
 }
 
 .isi-berita {
-    text-align: center;
-    font-size: smaller;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.isi-berita p {
+    text-align: left;
+    text-align: justify;
+    font-size: 12px;
+    line-height: 100 px;
+    color: #616161;
+}
+
+.gambar-berita {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.gambar-berita img {
+    width: 100%;
+    height: 100%;
 }
 
 .selengkapnya-berita {
     text-align: right;
     font-size: smaller;
-    margin-top: 20px;
+    margin-top: 45px;
     color: #416bff
 }
 
@@ -399,13 +429,14 @@ body {
 }
 
 .gambar-riwayat {
-    padding: 5%;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .gambar-riwayat img {
     width: 80%;
-    height: 80%;
+    height: 50%;
 }
 
 .isi-riwayat {
@@ -413,22 +444,16 @@ body {
     font-size: smaller;
 }
 
+.banner-riwayat {
+    height: 100%;
+    width: 100%;
+    background-color: black
+}
+
 .selengkapnya-riwayat {
     text-align: right;
     font-size: smaller;
     margin-top: 22px;
     color: #416bff
-}
-
-.banner-iklan {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 25%;
-}
-
-.banner-iklan img {
-    width: 100%;
-    height: 100%;
 }
 
