--- a/templates/index.html
+++ b/templates/index.html
@@ -102,27 +102,15 @@
               </div>
               <div class="detail">
                 <ul>
-                  <li><b>Plat Nomor</b>       : D 1893 RAY</li>
-                  <li><b>Jenis Kendaraan</b>  : Motor Sport</li>
-                  <li><b>Warna Kendaraan</b>  : Merah Hitam</li>
-                  <li><b>Nomor Rangka </b>    : 1HGBH41JXMNxxxxx</li>
-                  <li><b>Nomor Mesin</b>      : JF21E</li>
-                  <li><b>Jumlah Biaya </b>    : Rp 358.000</li>
-                  <li><b>Diskon Pajak </b>    : ARp 35.800</li>
+                  <li>Plat Nomor       : D 1893 RAY</li>
+                  <li>Jenis Kendaraan  : Motor Sport</li>
+                  <li>Warna Kendaraan  : Merah Hitam</li>
+                  <li>Nomor Rangka     : 1HGBH41JXMNxxxxx</li>
+                  <li>Nomor Mesin      : JF21E</li>
+                  <li>Jumlah Biaya     : Rp 358.000</li>
+                  <li>Diskon Pajak     : ARp 35.800</li>
                 </ul>
-                <!-- <p>Plat Nomor       : D 1893 RAY</p>
-                <p>Jenis Kendaraan  : Motor Sport</p>
-                <p>Warna Kendaraan  : Merah Hitam</p>
-                <p>Nomor Rangka     : 1HGBH41JXMNxxxxx</p>
-                <p>Nomor Mesin      : JF21E</p>
-                <p>Jumlah Biaya     : Rp 358.000</p>
-                <p>Diskon Pajak     : Rp 35.800</p> -->
               </div>
-              <!-- <div class="detail2">
-                <p>Nomor Mesin      : JF21E</p>
-                <p>Jumlah Biaya     : Rp 358.000</p>
-                <p>Diskon Pajak     : Rp 35.800</p>
-              </div> -->
             </div>
             <div class = "jumlah-kendaraan">
               <!-- <img src="../../static/image/icons/titik4.svg" alt=""> -->
