--- a/templates/index.html
+++ b/templates/index.html
@@ -101,59 +101,102 @@
                 <img src="../../static/image\icons\motorcycle 1.svg" alt="">
               </div>
               <div class="detail1">
-                <p>Plat Nomor       : D 1893 ray</p>
-                <p>Jenis Kendaraan  : Motor Sport</p>
-                <p>Warna Kendaraan  : Merah Hitam</p>
-                <p>Nomor Rangka     : 1HGBH41JXMNxxxxx</p>
+                <table>
+                  <tr>
+                    <th class="th1"></th>
+                    <th class="th2"></th>
+                    <th class="th3"></th>
+                  </tr>
+                  <tr>
+                    <td class = "bold">Plat Nomor</td>
+                    <td class = "bold">:</td>
+                    <td>D 1893 RAY</td>
+                  </tr>
+                  <tr>
+                    <td class = "bold">Jenis Kendaraan</td>
+                    <td class = "bold">:</td>
+                    <td>Motor Sport</td>
+                  </tr>
+                  <tr>
+                    <td class = "bold">Warna Kendaraan</td>
+                    <td class = "bold">:</td>
+                    <td>Merah Hitam</td>
+                  </tr>
+                  <tr>
+                    <td class = "bold">Nomor Rangka</td>
+                    <td class = "bold">:</td>
+                    <td>1HGBH41JXMNxxxxx</td>
+                  </tr>
+                </table>
               </div>
               <div class="detail2">
-                <p>Nomor Mesin      : JF21E</p>
-                <p>Jumlah Biaya     : Rp 358.000</p>
-                <p>Diskon Pajak     : Rp 35.800</p>
+                <table>
+                  <tr>
+                    <th class="th1"></th>
+                    <th class="th2"></th>
+                    <th class="th3"></th>
+                  </tr>
+                  <tr>
+                    <td class = "bold">Nomor Mesin</td>
+                    <td class = "bold">:</td>
+                    <td>JF21E</td>
+                  </tr>
+                  <tr>
+                    <td class = "bold">Jumlah Biaya</td>
+                    <td class = "bold">:</td>
+                    <td>Rp 358.000</td>
+                  </tr>
+                  <tr>
+                    <td class = "bold">Diskon Pajak</td>
+                    <td class = "bold">:</td>
+                    <td>Rp 35.800</td>
+                  </tr>
+                </table>
               </div>
             </div>
             <div class = "jumlah-kendaraan">
               <img src="../../static/image\icons\titik4.svg" alt="">
             </div>
           </div>
+
           <div class = "informasi-dashboard">
-            <div class="terdekat">
+            <div class="terdekat-container">
               <div class="judul-terdekat">
-                <p>Samsat Terdekat</p>
+                Samsat Terdekat
               </div>
               <div class="gambar-terdekat">
                 <img src="../../static/image\icons\maps.svg" alt="">
               </div>
               <div class="selengkapnya-terdekat">
-                <p>Selengkapnya</p>
+                Selengkapnya
               </div>
             </div>
-            <div class="berita">
+            <div class="berita-container">
               <div class="judul-berita">
-                <p>Berita Harian Terkini</p>
+                Berita Harian Terkini
               </div>
               <div class="gambar-berita">
                 <img src="../../static/image\icons\berita.svg" alt="">
               </div>
               <div class="isi-berita">
-                <p>Bapenda Jabar Galang Donasi Untuk Gempa Cianjur</p>
+                <p>Bapenda Jabar Galang Donasi Untuk Gempa Cianjur [...]</p>
               </div>
               <div class="selengkapnya-berita">
                 <p>Selengkapnya</p>
               </div>
             </div>
-            <div class="riwayat">
+            <div class="riwayat-container">
               <div class="judul-riwayat">
                 <p>Riwayat Pembayaran</p>
               </div>
               <div class="gambar-riwayat">
-                <img src="../../static/image\icons\motorcycle 1.svg" alt="">
+                <img src="../../static/image\icons\motorcycle 2.svg" alt="">
               </div>
               <div class="isi-riwayat">
-                <p>Pajak Motor</p>
+                30 November 2021
               </div>
               <div class="selengkapnya-riwayat">
-                <p>Selengkapnya</p>
+                Selengkapnya
               </div>
             </div>
           </div>
@@ -164,13 +207,13 @@
 
       <div class = "right-cont">
         <div class="profile-container">
-          <img src="../../image/icons/ic_notification.svg">
+          <img src="../static/image/icons/ic_notification.svg">
           Aulia Fajri
-          <img src="../../../image/foto/profile.svg" style="padding: 2px;">   
+          <img src="../static/image/foto/profile.svg" style="padding: 2px;">   
         </div>
 
         <div class="jatuh-tempo-container">
-          <img src="../../image/icons/ic_warning.svg">
+          <img src="../static/image/icons/ic_warning.svg">
           <p class="plat-nomor">D 1893 RAY</p> 
           <div class="tanggal-jatuh-tempo">
             Jatuh tempo pada : <strong>30 November 2022</strong>
