--- a/templates/pages/samling.html
+++ b/templates/pages/samling.html
@@ -104,9 +104,9 @@
         </div>
 
         <div class = "right-body-cont">
-          <div class = "title-samsat-container">
+          <div class = "title-samsat-container" id="header3">
             <h1><b>Samsat Keliling</b></h1>
-            <h3>Kota Bandung</h3>
+            <!-- <h3>Kota Bandung</h3> -->
           </div>
           <div class = "table-jadwal-container">
 
