--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -180,15 +180,15 @@ body {
 }
 
 .tanggal-jatuh-tempo {
-    width: 80%;
+    width: 90%;
     height: 60px;
     background:  #a50909;
     border-radius: 15px;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: normal;
     color: #ffffff; 
     text-align: center;
-    padding: 9px 20px;
+    padding: 10px 20px;
 }
 
 .button-bayar {
@@ -396,7 +396,7 @@ button.dropbtn {
 }
 
 .detail2 {
-    padding-top: 29px;
+    padding-top: 25px;
     padding-left: 40px;
     font-size: 14px;
     width: 40%;
@@ -537,7 +537,7 @@ button.dropbtn {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 20px 20px 10px 20px;
     border-radius: 15px;
     border: 1px solid #ffffff;
     background-color: #ffffff;
@@ -566,11 +566,12 @@ button.dropbtn {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300%;
+    height: 100%;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
     border-radius: 20px;
     font-size: 20px;
+    margin-bottom: 20px;
     font-weight: bold;
     color: white;
 }
@@ -578,7 +579,7 @@ button.dropbtn {
 .selengkapnya-riwayat {
     text-align: right;
     font-size: smaller;
-    margin-top: 10px;
+    margin-top: 5px;
     color: #416bff
 }
 
